--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,10 @@ handlers:
 - url: /favicon.ico
   static_files: static/images/favicon.ico
   upload: static/images/favicon.ico
+  
+- url: /apple-touch-icon.png
+  static_files: static/images/apple-touch-icon.png
+  upload: static/images/apple-touch-icon.png
 
 - url: /robots.txt
   static_files: static/robots.txt
